fix: correção de bug no z-index do header

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@
 }
 
 header {
+  z-index: 100;
   width: 80%;
   height: 80px;
   background-color: rgba(30, 30, 30, 0.8470588235);
