--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,4 +1,5 @@
 header
+    z-index: 100
     width: 80%
     height: 80px
     background-color: $preto-transparencia
